@@ -11,6 +11,7 @@ Bugfixes:
 * More proper memory cleanup in parsing zonefetch.xml
 * Zonefetch.xml now accepts hmac-md5, which is an alias for
   hmac-md5.sig-alg.reg.int.
+* Zone fetcher logged wrong zone when NOTIFY received.
 
 
 OpenDNSSEC 1.0.0 - 2010-02-09
